remove bg-attachment fixed as jumpy on mobile

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -117,6 +117,10 @@
     }
   }
 
+  main {
+    background-attachment: initial;
+  }
+
   .wrapper {
     width: 80%;
   }
@@ -168,9 +172,8 @@
 
 @media only screen and (max-width: 500px) {
   main {
-    .bg {
-      background-image: url(./Landing/bg-mobile.jpg);
-    }
+    background-image: url(./Landing/bg-mobile.jpg);
+    background-attachment: initial;
 
     .angle-down {
       bottom: 10px;
